--- a/codes/16_nlp_with_rnns_and_attention.ipynb
+++ b/codes/16_nlp_with_rnns_and_attention.ipynb
@@ -226,7 +226,7 @@
      "text": [
       "31247/31247 [==============================] - 776s 25ms/step - loss: 1.9545 - accuracy: 0.4181 - val_loss: 1.9396 - val_accuracy: 0.4209\n",
       "Epoch 2/2\n",
-      "21776/31247 [===================>..........] - ETA: 3:53 - loss: 1.8806 - accuracy: 0.4391"
+      "31247/31247 [==============================] - 787s 25ms/step - loss: 1.8943 - accuracy: 0.4339 - val_loss: 1.9565 - val_accuracy: 0.4145\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,9 +257,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-30 02:07:06.127252: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-30 02:07:06.240412: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 1s 645ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_proba = shakespeare_model.predict(['To be or not to b'])[0, -1]\n",
     "y_pred = tf.argmax(y_proba)\n",
@@ -275,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,27 +336,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 149ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-30 02:07:07.032339: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n",
+      "2023-10-30 02:07:07.102589: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 39ms/step\n",
+      "1/1 [==============================] - 0s 39ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 39ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 39ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 101ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'To be or not to be the the the the the the the the the the the the t'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "extend_text('To be or not to be', temperature=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 48ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'To be or not to bes\\n\\nibosie:\\nberp, grecled,\\na mance grrore me wilich'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "extend_text('To be or not to be', temperature=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 47ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"To be or not to beg ,mt'&o3f:ady-$\\nws-nse?pws&ertj-vberdjw!c-yjewznq\""
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "extend_text('To be or not to be', temperature=100)"
    ]
